--- a/CSAS.csproj
+++ b/CSAS.csproj
@@ -60,8 +60,8 @@
     <Reference Include="RestSharp, Version=106.0.0.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
       <HintPath>packages\RestSharp.106.10.1\lib\net452\RestSharp.dll</HintPath>
     </Reference>
-    <Reference Include="SendGrid, Version=9.13.0.0, Culture=neutral, PublicKeyToken=4f047e93159395ca, processorArchitecture=MSIL">
-      <HintPath>packages\SendGrid.9.13.0\lib\net452\SendGrid.dll</HintPath>
+    <Reference Include="SendGrid, Version=9.13.1.0, Culture=neutral, PublicKeyToken=4f047e93159395ca, processorArchitecture=MSIL">
+      <HintPath>packages\SendGrid.9.13.1\lib\net452\SendGrid.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -115,6 +115,12 @@
     <Compile Include="Choose_Group.Designer.cs">
       <DependentUpon>Choose_Group.cs</DependentUpon>
     </Compile>
+    <Compile Include="CreateActivity.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateActivity.Designer.cs">
+      <DependentUpon>CreateActivity.cs</DependentUpon>
+    </Compile>
     <Compile Include="CreateTemplate.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +140,12 @@
     <Compile Include="EmailSendingForm.Designer.cs">
       <DependentUpon>EmailSendingForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="EmailTemplateForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EmailTemplateForm.Designer.cs">
+      <DependentUpon>EmailTemplateForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Import_Cl.cs" />
     <Compile Include="Main_Window.cs">
       <SubType>Form</SubType>
@@ -143,6 +155,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendEmailCheck.cs" />
     <Compile Include="Statistics.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -163,6 +176,9 @@
     <EmbeddedResource Include="Choose_Group.resx">
       <DependentUpon>Choose_Group.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CreateActivity.resx">
+      <DependentUpon>CreateActivity.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CreateTemplate.resx">
       <DependentUpon>CreateTemplate.cs</DependentUpon>
     </EmbeddedResource>
@@ -171,6 +187,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EmailSendingForm.resx">
       <DependentUpon>EmailSendingForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EmailTemplateForm.resx">
+      <DependentUpon>EmailTemplateForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main_Window.resx">
       <DependentUpon>Main_Window.cs</DependentUpon>
