--- a/packages.config
+++ b/packages.config
@@ -3,10 +3,11 @@
   <package id="AutocompleteMenu" version="1.3.5.0" targetFramework="net472" />
   <package id="Bezier" version="0.9.3.5" targetFramework="net472" />
   <package id="Font" version="0.3.0.3" targetFramework="net472" />
+  <package id="MaterialSkin.2" version="2.1.2" targetFramework="net472" />
   <package id="MaterialSkin.Updated" version="0.2.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="RestSharp" version="106.10.1" targetFramework="net472" />
-  <package id="SendGrid" version="9.13.1" targetFramework="net472" />
+  <package id="SendGrid" version="9.13.2" targetFramework="net472" />
   <package id="System.Data.OleDb" version="4.7.0" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.1.1" targetFramework="net472" />
 </packages>
