--- a/packages.config
+++ b/packages.config
@@ -1,13 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutocompleteMenu" version="1.3.5.0" targetFramework="net472" />
-  <package id="Bezier" version="0.9.3.5" targetFramework="net472" />
+  <package id="Bezier" version="0.9.4" targetFramework="net472" />
+  <package id="ClosedXML" version="0.95.1" targetFramework="net472" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.11.0-beta0001" targetFramework="net472" />
+  <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net472" />
   <package id="Font" version="0.3.0.3" targetFramework="net472" />
+  <package id="itext7" version="7.1.11" targetFramework="net472" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
+  <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net472" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
   <package id="MaterialSkin.2" version="2.1.2" targetFramework="net472" />
   <package id="MaterialSkin.Updated" version="0.2.2" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="RestSharp" version="106.10.1" targetFramework="net472" />
-  <package id="SendGrid" version="9.13.2" targetFramework="net472" />
-  <package id="System.Data.OleDb" version="4.7.0" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.1.1" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.8.6.7" targetFramework="net472" />
+  <package id="RestSharp" version="106.10.2-alpha.0.8" targetFramework="net472" />
+  <package id="SendGrid" version="9.14.0" targetFramework="net472" />
+  <package id="System.Data.OleDb" version="5.0.0-preview.3.20214.6" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="5.0.0-preview.3.20214.6" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
 </packages>
