--- a/App.config
+++ b/App.config
@@ -5,6 +5,17 @@
   <connectionStrings>
     <add name="CSAS.Properties.Settings.masterConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\StudentDatabase.mdf;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="CSAS.Properties.Settings.CSASDBConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CSASDB.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="CSAS.Properties.Settings.D__BC__PRACA_CSAS_CSASDB_MDFConnectionString"
+      connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=&quot;D:\BC- PRACA\CSAS\CSASDB.mdf&quot;;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
+      providerName="System.Data.SqlClient" />
+    <add name="CSAS.Properties.Settings.StudentDatabaseConnectionString"
+      connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\StudentDatabase.mdf;Initial Catalog=StudentDatabase;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="CSAS.Properties.Settings.StudentDatabaseConnectionString1"
+      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\StudentDatabase.mdf;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
